# MLIR-Linnea

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
include/Standalone/: .LinneaPasses.h.swp  CMakeLists.txt  LinneaAttrBase.td  LinneaAttributes.h  LinneaDialect.h  LinneaDialect.td  LinneaExpr.h  LinneaExprImpl.h  LinneaOps.h  LinneaOps.td  LinneaPasses.h  LinneaPasses.td  LinneaTypeBase.td  LinneaTypeConverter.h  LinneaTypes.h  LinneaUtils-Inl.h  LinneaUtils.h  StandaloneAttrBase.td  StandaloneAttributes.h  StandaloneDialect.h  StandaloneDialect.td  StandaloneTypeBase.td  StandaloneTypes.h
include/Standalone-c/: LinneaDialect.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  LinneaDialect.cpp  LinneaPasses.cpp
lib/Standalone/: CMakeLists.txt  LinneaAttributes.cpp  LinneaCompilerPipeline.cpp  LinneaConvertToLinalg.cpp  LinneaConvertToLoops.cpp  LinneaDialect.cpp  LinneaExpr.cpp  LinneaExtraCopyRemoval.cpp  LinneaFinalizeTypeConversion.cpp  LinneaOps.cpp  LinneaPasses.cpp  LinneaProperties.cpp  LinneaPropertyPropagation.cpp  LinneaTypeConversion.cpp  LinneaTypes.cpp  LinneaUtils.cpp  LinneaUtilsExpr.cpp  StandaloneAttributes.cpp  StandaloneDialect.cpp  StandaloneTypes.cpp
python/: CMakeLists.txt  LinneaPasses.cpp  StandaloneExtension.cpp
python/mlir_standalone/dialects/: StandaloneOps.td  _linnea_ops_ext.py  standalone.py
python/mlir_standalone/passes/: standalone.py
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: standalone-capi-test.c
test/Integration/: CMakeLists.txt  chain-ref.cpp  integration-test.mlir  integration.mlir  linnea-lower-add-op.mlir  linnea-lower-add-op2.mlir  linnea-lower-chain.mlir  linnea-lower-fill-op.mlir  linnea-lower-mul-op.mlir  linnea-lower-mul-op2.mlir  linnea-lower-mul-op3.mlir  linnea-lowering.mlir  linnea-time-chain-opt-small.mlir
test/Integration/pylinnea/: CMakeLists.txt  README.md  lit.local.cfg  smoketest.py  smoketest2.py  test_function.py  test_parser.py
test/Integration/pylinnea/tools/: parser.py  utils.py
test/Integration/pylinnea/tools/algebra/: properties.py  property_inference.py
test/Integration/pylinnea/tools/frontend/: AST_translation.py  utils.py
test/Standalone/: canonicalize-equ.mlir  canonicalize.mlir  conversion.mlir  dummy.mlir  encoding.mlir  func-conversion.mlir  func-type-conversion.mlir  invalid.mlir  lower-to-linalg-test.mlir  lower-to-linalg-test2.mlir  lower-to-linalg.mlir  module-conversion.mlir  ops.mlir  properties-propagation.mlir  simple-conversion.mlir  type.mlir
test/Unit/: lit.cfg.py  lit.site.cfg.py.in
test/python/: dialect.py  end2end.py  endToEnd.py  ops.py
unittests/: CMakeLists.txt  basicOp.h  mul.h  test-basic.cpp  test-chain.cpp  test-dimensions.cpp  test-parser.cpp  test-properties.cpp
